Skip to content

[oss-fuzz 6495159378575360] Integer-overflow in subtitle_ParseSubRipTimingValue

Ref:

xeon ~/work/git/vlc/build-ubsan $  UBSAN_OPTIONS=exitcode=77:handle_abort=2:silence_unsigned_overflow=1:print_stacktrace=1 VLC_TARGET=subtitle ./test/vlc-demux-dec-run /home/tom/Downloads/clusterfuzz-testcase-minimized-vlc-demux-dec-libfuzzer-subtitle-6495159378575360 
../../modules/demux/subtitle.c:1146:11: runtime error: signed integer overflow: 1260588204 * 60 cannot be represented in type 'int'
    #0 0x7f615eb7d046 in subtitle_ParseSubRipTimingValue ../../modules/demux/subtitle.c:1146
    #1 0x7f615eb7e146 in subtitle_ParseSubRipTiming ../../modules/demux/subtitle.c:1163
    #2 0x7f615eb7ff06 in ParseSubRipSubViewer ../../modules/demux/subtitle.c:1072
    #3 0x7f615eb80188 in ParseSubRip ../../modules/demux/subtitle.c:1178
    #4 0x7f615eb85c49 in Open ../../modules/demux/subtitle.c:660
    #5 0x7f6161e234ae in demux_Probe ../../src/input/demux.c:112
    #6 0x7f6161dc8db0 in vlc_module_load ../../src/modules/modules.c:230
    #7 0x7f6161e241f4 in demux_NewAdvanced ../../src/input/demux.c:196
    #8 0x7f6161e2463d in demux_New ../../src/input/demux.c:77
    #9 0x5564f76c7352 in demux_process_stream ../../test/src/input/demux-run.c:300
    #10 0x5564f76c7568 in vlc_demux_process_url ../../test/src/input/demux-run.c:354
    #11 0x5564f76c760b in vlc_demux_process_path ../../test/src/input/demux-run.c:368
    #12 0x5564f76c6463 in main ../../test/vlc-demux-run.c:50
    #13 0x7f6161233d67 in __libc_start_call_main ../sysdeps/nptl/libc_start_call_main.h:58
    #14 0x7f6161233e24 in __libc_start_main_impl ../csu/libc-start.c:360
    #15 0x5564f76c62f0 in _start (/home/tom/work/git/vlc/build-ubsan/test/vlc-demux-dec-run+0x32f0) (BuildId: bd4b0846f7232edd09a0b1d9d03fe74e7faf36c6)

Sample:

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information