demux: subtitle: fix potential integer overflow in SubRip timings

Fixes #29064